fix(issuer): fix layout broken on overview capped sto

--- a/packages/polymath-ui/src/components/STOStatus/style.scss
+++ b/packages/polymath-ui/src/components/STOStatus/style.scss
@@ -27,3 +27,20 @@
     margin-top: auto;
   }
 }
+
+.pui-sto-status-progress-bar {
+  margin-bottom: $spacing-xl;
+}
+
+.pui-sto-status-bottom-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pui-sto-status-dates {
+  display: flex;
+
+  > div {
+    padding-right: 34px;
+  }
+}
